<resources>
    <string name="app_name">AppProxy</string>
    <!-- Main Activity -->
    <string name="notify_title">Proxy is running</string>
    <string name="notify_msg">Proxy is running</string>
    <string name="start">Start VPN</string>
    <string name="stop">Stop VPN</string>
    <string name="msg_start_failed">Start failed</string>
    <string name="host_hint">Proxy address (ipv4:port)</string>
    <string name="enter_host">Enter valid ip v4 address</string>
    <string name="address">Address:</string>
    <string name="ipInfo">IP Info</string>
    <string name="status">Status:</string>
    <string name="duration">Duration:</string>
    <string name="traffic">Traffic:</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <!-- Main menu -->
    <string name="title_show_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Category -->
    <string name="search">Search</string>

    <string name="pref_header_allowed_application_list">Allowed application list</string>
    <string name="pref_header_disallowed_application_list">Disallowed application list</string>
    <string name="pref_dialog_clear_all_application_msg">Clear all selections of Allowed / Disallowed application list</string>

    <string name="pref_vpn_connection_mode">Allowed / Disallowed Application</string>
    <string name="loading">Please wait</string>
    <string-array name="pref_vpn_connection_name">
        <item>Allowed Application</item>
        <item>Disallowed Application</item>
    </string-array>
    <string-array name="pref_vpn_connection_value">
        <item>ALLOW</item>
        <item>DISALLOW</item>
    </string-array>

</resources>